# faceproof

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: ARCHITECTURE.md  PRD.md
evaluation/: __init__.py  antispoofing_metrics.py  calibration.py  colab_antispoofing_evaluation.ipynb  colab_lfw_evaluation.ipynb  lfw.py  run_antispoofing_evaluation.py  run_lfw_evaluation.py
evaluation/results/: antispoofing_report.md  lfw_report.md  lfw_scores.npz
faceproof/: __init__.py  _minifasnet.py  _mobilenet.py  api.py  config.py  decision.py  detection.py  embedding.py  errors.py  images.py  liveness.py  matching.py  schemas.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  content.ts  index.css  main.tsx  types.ts
frontend/src/components/: CaptureSlot.tsx  Demo.tsx  FaceScan.tsx  Footer.tsx  Hero.tsx  ImageDrop.tsx  Metrics.tsx  Nav.tsx  Pipeline.tsx  Problem.tsx  ResultPanel.tsx  Reveal.tsx  SectionHeading.tsx  icons.tsx
frontend/src/hooks/: useCamera.ts
models/: README.md  download_silentface.py
tests/: test_antispoofing_metrics.py  test_api.py  test_calibration.py  test_celeba_spoof.py  test_decision.py  test_detection.py  test_embedding.py  test_images.py  test_liveness.py  test_matching.py  test_smoke.py
training/: __init__.py  celeba_spoof.py  colab_train_antispoofing.ipynb  model.py  train_antispoofing.py
