[project]
name = "faceproof"
version = "0.1.0"
description = "Face verification + liveness detection reference implementation for identity verification."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "python-multipart>=0.0.12,<1",
    "pillow>=10.4,<12",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4,<3",
    "torchvision>=0.19,<1",
    "onnxruntime>=1.18,<2",
    "insightface>=0.7.3,<1",
    "opencv-python-headless>=4.10,<5",
    "scikit-learn>=1.5,<2",
    "matplotlib>=3.8,<4",
]
dev = [
    "pytest>=8.2,<9",
    "httpx>=0.27,<1",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["faceproof*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb", "faceproof/_minifasnet.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["insightface.*", "torch.*", "cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faceproof._minifasnet"]
ignore_errors = true
